k8s/1-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ctf-platform
  labels:
    name: ctf-platform
