k8s/mariadb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ctf-platform
  labels:
    app: mariadb
  name: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
      labels:
        app: mariadb
    spec:
      containers:
        - args:
            - mysqld
            - --character-set-server=utf8mb4
            - --collation-server=utf8mb4_unicode_ci
            - --wait_timeout=28800
            - --log-warnings=0
          image: mariadb:10.5.12
          imagePullPolicy: ""
          name: mariadb
          ports:
            - containerPort: 3306
          resources: {}
      restartPolicy: Always
      serviceAccountName: ""
---
apiVersion: v1
kind: Service
metadata:
  namespace: ctf-platform
  labels:
    app: mariadb
  name: mariadb
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mariadb
