k8s/getting-started-minimal.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/business-unit: lectorate-cybersecurity
    app.kubernetes.io/created-by: hogeschool-utrecht
    app.kubernetes.io/environment: development-minimal
    app.kubernetes.io/managed-by: argocd
    app.kubernetes.io/owner: hogeschool-utrecht
    app.kubernetes.io/owner-email: jointcyberrange_at_hu.nl
    app.kubernetes.io/part-of: Joint_Cyber_Range
    app.kubernetes.io/repository: gitlab.com_hu-hc_jcr_platform_ctfd-as-a-service
  name: jcr-getting-started
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    a8r.io/bugs: IssueTracker_SOON
    a8r.io/chat: https://teams.microsoft.com/l/channel/19%3ad90662cfe69640edafce700c163a7f68%40thread.tacv2/DevOps?groupId=0da215fb-47cc-416b-8415-e8da6ff75f02&tenantId=98932909-9a5a-4d18-ace4-7236b5b5e11d
    a8r.io/dependencies: CTFd, Redis, MariaDB, Cloud-provider, Kubernetes cluster, GitLab container registry, SURFconext OpenID Connect setup
    a8r.io/description: Joint Cyber Range, Built on CTFd and customized with plugins providing container challenges and Single-Sign-On
    a8r.io/documentation: https://gitlab.com/hu-hc/jcr/platform/ctf-platform/-/blob/master/README.md
    a8r.io/incidents: IssueTracker_SOON
    a8r.io/logs: kubectl logs/Lens
    a8r.io/owner: JointCyberRange
    a8r.io/performance: N/A
    a8r.io/repository: https://gitlab.com/hu-hc/jcr/platform/ctf-platform
    a8r.io/runbook: https://gitlab.com/hu-hc/jcr/platform/ctfd-as-a-service
    a8r.io/support: IssueTracker_SOON
    a8r.io/uptime: https://status.asm.saas.broadcom.com/67337
  labels:
    app.kubernetes.io/business-unit: lectorate-cybersecurity
    app.kubernetes.io/component: application
    app.kubernetes.io/created-by: hogeschool-utrecht
    app.kubernetes.io/environment: development-minimal
    app.kubernetes.io/instance: ctfd-tenant
    app.kubernetes.io/managed-by: argocd
    app.kubernetes.io/name: ctfd
    app.kubernetes.io/owner: hogeschool-utrecht
    app.kubernetes.io/owner-email: jointcyberrange_at_hu.nl
    app.kubernetes.io/part-of: Joint_Cyber_Range
    app.kubernetes.io/purpose: app_logic_frontend
    app.kubernetes.io/repository: gitlab.com_hu-hc_jcr_platform_ctfd-as-a-service
    app.kubernetes.io/tier: frontend
    app.kubernetes.io/version: 3.1.1
  name: dev-minimal-ctfd
  namespace: jcr-getting-started
spec:
  ports:
  - port: 8000
  selector:
    app: ctfd
    app.kubernetes.io/business-unit: lectorate-cybersecurity
    app.kubernetes.io/component: application
    app.kubernetes.io/created-by: hogeschool-utrecht
    app.kubernetes.io/environment: development-minimal
    app.kubernetes.io/instance: ctfd-tenant
    app.kubernetes.io/managed-by: argocd
    app.kubernetes.io/name: ctfd
    app.kubernetes.io/owner: hogeschool-utrecht
    app.kubernetes.io/owner-email: jointcyberrange_at_hu.nl
    app.kubernetes.io/part-of: Joint_Cyber_Range
    app.kubernetes.io/purpose: app_logic_frontend
    app.kubernetes.io/repository: gitlab.com_hu-hc_jcr_platform_ctfd-as-a-service
    app.kubernetes.io/tier: frontend
    app.kubernetes.io/version: 3.1.1
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    a8r.io/bugs: IssueTracker_SOON
    a8r.io/chat: https://teams.microsoft.com/l/channel/19%3ad90662cfe69640edafce700c163a7f68%40thread.tacv2/DevOps?groupId=0da215fb-47cc-416b-8415-e8da6ff75f02&tenantId=98932909-9a5a-4d18-ace4-7236b5b5e11d
    a8r.io/dependencies: CTFd, Redis, MariaDB, Cloud-provider, Kubernetes cluster, GitLab container registry, SURFconext OpenID Connect setup
    a8r.io/description: Joint Cyber Range, Built on CTFd and customized with plugins providing container challenges and Single-Sign-On
    a8r.io/documentation: https://gitlab.com/hu-hc/jcr/platform/ctf-platform/-/blob/master/README.md
    a8r.io/incidents: IssueTracker_SOON
    a8r.io/logs: kubectl logs/Lens
    a8r.io/owner: JointCyberRange
    a8r.io/performance: N/A
    a8r.io/repository: https://gitlab.com/hu-hc/jcr/platform/ctf-platform
    a8r.io/runbook: https://gitlab.com/hu-hc/jcr/platform/ctfd-as-a-service
    a8r.io/support: IssueTracker_SOON
    a8r.io/uptime: https://status.asm.saas.broadcom.com/67337
  labels:
    app: ctfd
    app.kubernetes.io/business-unit: lectorate-cybersecurity
    app.kubernetes.io/component: application
    app.kubernetes.io/created-by: hogeschool-utrecht
    app.kubernetes.io/environment: development-minimal
    app.kubernetes.io/instance: ctfd-tenant
    app.kubernetes.io/managed-by: argocd
    app.kubernetes.io/name: ctfd
    app.kubernetes.io/owner: hogeschool-utrecht
    app.kubernetes.io/owner-email: jointcyberrange_at_hu.nl
    app.kubernetes.io/part-of: Joint_Cyber_Range
    app.kubernetes.io/purpose: app_logic_frontend
    app.kubernetes.io/repository: gitlab.com_hu-hc_jcr_platform_ctfd-as-a-service
    app.kubernetes.io/tier: frontend
    app.kubernetes.io/version: 3.1.1
  name: dev-minimal-ctfd
  namespace: jcr-getting-started
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ctfd
      app.kubernetes.io/business-unit: lectorate-cybersecurity
      app.kubernetes.io/component: application
      app.kubernetes.io/created-by: hogeschool-utrecht
      app.kubernetes.io/environment: development-minimal
      app.kubernetes.io/instance: ctfd-tenant
      app.kubernetes.io/managed-by: argocd
      app.kubernetes.io/name: ctfd
      app.kubernetes.io/owner: hogeschool-utrecht
      app.kubernetes.io/owner-email: jointcyberrange_at_hu.nl
      app.kubernetes.io/part-of: Joint_Cyber_Range
      app.kubernetes.io/purpose: app_logic_frontend
      app.kubernetes.io/repository: gitlab.com_hu-hc_jcr_platform_ctfd-as-a-service
      app.kubernetes.io/tier: frontend
      app.kubernetes.io/version: 3.1.1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        a8r.io/bugs: IssueTracker_SOON
        a8r.io/chat: https://teams.microsoft.com/l/channel/19%3ad90662cfe69640edafce700c163a7f68%40thread.tacv2/DevOps?groupId=0da215fb-47cc-416b-8415-e8da6ff75f02&tenantId=98932909-9a5a-4d18-ace4-7236b5b5e11d
        a8r.io/dependencies: CTFd, Redis, MariaDB, Cloud-provider, Kubernetes cluster, GitLab container registry, SURFconext OpenID Connect setup
        a8r.io/description: Joint Cyber Range, Built on CTFd and customized with plugins providing container challenges and Single-Sign-On
        a8r.io/documentation: https://gitlab.com/hu-hc/jcr/platform/ctf-platform/-/blob/master/README.md
        a8r.io/incidents: IssueTracker_SOON
        a8r.io/logs: kubectl logs/Lens
        a8r.io/owner: JointCyberRange
        a8r.io/performance: N/A
        a8r.io/repository: https://gitlab.com/hu-hc/jcr/platform/ctf-platform
        a8r.io/runbook: https://gitlab.com/hu-hc/jcr/platform/ctfd-as-a-service
        a8r.io/support: IssueTracker_SOON
        a8r.io/uptime: https://status.asm.saas.broadcom.com/67337
        prometheus.io/scrape: "true"
      labels:
        app: ctfd
        app.kubernetes.io/business-unit: lectorate-cybersecurity
        app.kubernetes.io/component: application
        app.kubernetes.io/created-by: hogeschool-utrecht
        app.kubernetes.io/environment: development-minimal
        app.kubernetes.io/instance: ctfd-tenant
        app.kubernetes.io/managed-by: argocd
        app.kubernetes.io/name: ctfd
        app.kubernetes.io/owner: hogeschool-utrecht
        app.kubernetes.io/owner-email: jointcyberrange_at_hu.nl
        app.kubernetes.io/part-of: Joint_Cyber_Range
        app.kubernetes.io/purpose: app_logic_frontend
        app.kubernetes.io/repository: gitlab.com_hu-hc_jcr_platform_ctfd-as-a-service
        app.kubernetes.io/tier: frontend
        app.kubernetes.io/version: 3.1.1
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: dev-minimal-configmap-ctfd
        image: registry.gitlab.com/hu-hc/jcr/platform/ctf-platform/development:latest
        name: ctfd
        ports:
        - containerPort: 8000
        resources: {}
      imagePullSecrets:
      - name: dev-minimal-gitlab-pull
      restartPolicy: Always
      securityContext:
        fsGroup: 1001
        runAsGroup: 1001
        runAsUser: 1001
      serviceAccountName: dev-minimal-ctfd
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    a8r.io/bugs: IssueTracker_SOON
    a8r.io/chat: https://teams.microsoft.com/l/channel/19%3ad90662cfe69640edafce700c163a7f68%40thread.tacv2/DevOps?groupId=0da215fb-47cc-416b-8415-e8da6ff75f02&tenantId=98932909-9a5a-4d18-ace4-7236b5b5e11d
    a8r.io/dependencies: CTFd, Redis, MariaDB, Cloud-provider, Kubernetes cluster, GitLab container registry, SURFconext OpenID Connect setup
    a8r.io/description: Joint Cyber Range, Built on CTFd and customized with plugins providing container challenges and Single-Sign-On
    a8r.io/documentation: https://gitlab.com/hu-hc/jcr/platform/ctf-platform/-/blob/master/README.md
    a8r.io/incidents: IssueTracker_SOON
    a8r.io/logs: kubectl logs/Lens
    a8r.io/owner: JointCyberRange
    a8r.io/performance: N/A
    a8r.io/repository: https://gitlab.com/hu-hc/jcr/platform/ctf-platform
    a8r.io/runbook: https://gitlab.com/hu-hc/jcr/platform/ctfd-as-a-service
    a8r.io/support: IssueTracker_SOON
    a8r.io/uptime: https://status.asm.saas.broadcom.com/67337
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.org/client-max-body-size: 1024m
  labels:
    app.kubernetes.io/business-unit: lectorate-cybersecurity
    app.kubernetes.io/component: application
    app.kubernetes.io/created-by: hogeschool-utrecht
    app.kubernetes.io/environment: development-minimal
    app.kubernetes.io/instance: ctfd-tenant
    app.kubernetes.io/managed-by: argocd
    app.kubernetes.io/name: ctfd
    app.kubernetes.io/owner: hogeschool-utrecht
    app.kubernetes.io/owner-email: jointcyberrange_at_hu.nl
    app.kubernetes.io/part-of: Joint_Cyber_Range
    app.kubernetes.io/purpose: app_logic_frontend
    app.kubernetes.io/repository: gitlab.com_hu-hc_jcr_platform_ctfd-as-a-service
    app.kubernetes.io/tier: frontend
    app.kubernetes.io/version: 3.1.1
  name: dev-minimal-ingress
  namespace: jcr-getting-started
spec:
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - backend:
          service:
            name: dev-minimal-ctfd
            port:
              number: 8000
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - kubernetes.docker.internal
    secretName: dev-minimal-selfsigned-tls-secret
